--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -135,11 +135,14 @@ header {
 
 @media (max-width: 600px) {
     .video-container {
-        max-width: 90%;
+        max-width: 100%;
         /* <----- 16:9 aspect ratio */
-        padding-bottom: 50.63%;
+        padding-bottom: 56.25%;
         /* <----- 16:9 aspect ratio */
-        margin-top: 5%;
+        margin-top: 0;
+        box-shadow: none;
+        border-radius: 0;
+        border: 3px solid #ffd500;
     }
 
 }
