--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -10,6 +10,16 @@ body {
     padding: 0%;
 }
 
+#site-background{
+    background-image: url("../images/background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 .separator {
     margin: 4em 0;
 }
@@ -20,6 +30,12 @@ hr {
 
 h1 {
     font-size: 40px;
+}
+
+@media(max-width:600px) {
+    h1 {
+        font-size: 30px;
+    }
 }
 
 /* h2 {
@@ -166,6 +182,14 @@ nav {
     min-height: 90px;
 }
 
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+
 .nav-links {
     list-style: none;
     display: flex;
@@ -297,7 +321,7 @@ nav {
 /*** Adding Styles to Company Details ***/
 
 .more-info-tabcontent {
-    background-color: #00000008;
+    background-color: #00000014;
     display: none;
     padding: 5% 5%;
     -webkit-animation: fadeEffect 1s;
@@ -306,14 +330,14 @@ nav {
     border-radius: 10px;
 }
 
-.more-info-tabcontent>a{
+.more-info-tabcontent>a {
     transition: 0.2s all ease;
     padding: 0.6rem 0;
 }
 
-.more-info-tabcontent>a:hover{
+.more-info-tabcontent>a:hover {
     scale: 1.11;
-    background-color: #cccccc;
+    background-color: #00000022;
 }
 
 .more-info-tab {
@@ -332,7 +356,7 @@ nav {
 .moreInfo {
     overflow: hidden;
     padding: 3rem 0em;
-    background: #00000022;
+    background: #ffd500;
     text-align: center;
     margin-top: 5em;
     height: fit-content;
