--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -427,13 +427,9 @@ ul.media li a {
 .more-info-links {
     display: block;
     text-decoration: underline;
-    text-decoration-color: #ffd500;
+    text-decoration-color: #000000;
     color: black;
     text-decoration-thickness: 2px;
-}
-
-.more-info-links:hover {
-    text-decoration-thickness: 3px;
 }
 
 /* more-content ----------------------------------------------------------*/
