--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -383,6 +383,7 @@ nav {
 
 #link-box-more-stories>div>h2{
     margin: 0;
+    text-align: center;
 }
 
 @media (max-width:960px) {
@@ -431,12 +432,19 @@ nav {
 }
 
 .divider {
+    font-size: larger;
     display: inline;
     font-weight: 100;
 }
 
+@media (max-width: 396px){
+    .divider{
+        opacity: 0;
+    }
+}
+
 #img-krhel3944 {
-    max-width: 100px;
+    max-width: 8em;
     border-radius: 5px;
     box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.267);
 
