--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -602,11 +602,11 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     border: 1px solid #ccc;
     background-color: #7f7f7f17;
     margin: auto;
-    width: 65%;
+    max-width: 52em;
 }
 
 /* for mobile */
-@media (max-width: 1160px) {
+@media (max-width: 930px) {
     .tab {
         flex-direction: column;
     }
@@ -614,7 +614,6 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 /* Style the buttons inside the tab */
 .tab button {
-    flex-grow: 1;
     float: left;
     border: none;
     outline: none;
@@ -642,12 +641,12 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 .tabcontent {
     background-color: #7f7f7f17;
     display: none;
-    padding: 5% 5%;
+    padding: 4em 4em;
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    width: 55%;
+    max-width: 44em;
     margin: auto;
     border: 1px solid #7f7f7f17;
     min-width: 250px;
