changed background colors on footer

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -458,7 +458,7 @@ nav {
 /*** Adding Styles to Company Details ***/
 
 .more-info-tabcontent {
-    background-color: #00000008;
+    background-color: #7f7f7f17;
     display: none;
     padding: 5% 5%;
     -webkit-animation: fadeEffect 1s;
@@ -478,14 +478,13 @@ nav {
 }
 
 .more-info-tab {
-    background-color: #00000000;
     margin: auto;
     width: fit-content;
 }
 
 .more-info-tab button {
     cursor: pointer;
-    background-color: #00000015;
+    background-color: #7f7f7f17;
     border: 1px;
     border-radius: 5px;
 }
@@ -588,6 +587,10 @@ ul.media li a {
 
 /* course-info-tabs ----------------------------------------------------- */
 
+.tabcontent>h2{
+    /* margin: 0 0 1em 0; */
+}
+
 /* tabs style copied from w3schools, then customized
 https://www.w3schools.com/howto/howto_js_tabs.asp
 https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
@@ -602,7 +605,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     border: 1px solid #ccc;
     background-color: #7f7f7f17;
     margin: auto;
-    max-width: 52em;
+    max-width: 49em;
 }
 
 /* for mobile */
@@ -618,7 +621,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 1em 2em;
     transition: 0.3s;
     font-size: 17px;
     border-radius: 3px;
@@ -641,12 +644,12 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 .tabcontent {
     background-color: #7f7f7f17;
     display: none;
-    padding: 4em 4em;
+    padding: 3em 4em;
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    max-width: 44em;
+    max-width: 41em;
     margin: auto;
     border: 1px solid #7f7f7f17;
     min-width: 250px;
@@ -785,7 +788,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     border-radius: 10px;
     justify-content: space-between;
     text-decoration: none;
-    transition: 0.2s all ease;
+    transition: 0.1s all ease;
     margin: 0 1em 1em 0;
 }
 
