--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -227,7 +227,7 @@ nav {
 /* main ----------------------------------------------------- */
 
 /* for desktop */
-#main {
+main {
     margin-left: 15%;
     margin-right: 15%;
     padding-top: 50px;
@@ -235,7 +235,7 @@ nav {
 
 /* for mobile */
 @media (max-width: 600px) {
-    #main {
+    main {
         margin-left: 5%;
         margin-right: 5%;
         padding-top: 20px;
