--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -843,13 +843,9 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 }
 
 .video-item {
-    background-color: transparent;
-    border: 1px solid transparent;
-    border-radius: 30px;
     padding: 10px;
     margin: 10px; 
-    flex: 1 1 45%;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    flex: 1 1 45%; 
 }
 
 .video-item img {
@@ -861,3 +857,32 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 }
 
 /* GITHUB TEXT PARAGRAPH-------------------------------------------------*/
+.split {
+    height: 100%;
+    width: 45%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.split-left, .split-right {
+    width: 50%;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 30px;
+}
+
+.split-left {
+    background-color: #ffd500;
+}
+
+.split-right {
+    background-color: #ccc;
+}
+#main-github {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
