Added Alt text, correct structured hierarchy

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,5 +1,5 @@
 html {
-    font-family: sans-serif;
+    font-family: sans-serif, Verdana, Geneva, Tahoma;
     scroll-behavior: smooth;
     line-height: 1.5;
 }
