--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -847,6 +847,21 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 }
 
 /* GITHUB TEXT PARAGRAPH-------------------------------------------------*/
+#main-github {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+
+}
+.split-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin: 20px;
+}
+
 .split {
     height: 100%;
     width: 45%;
@@ -858,10 +873,16 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 }
 
 .split-left, .split-right {
-    width: 50%;
-    padding: 20px;
+    width: 49%;
+    padding: 10px;
     box-sizing: border-box;
     border-radius: 30px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    border: 3px solid #3B3941;
 }
 
 .split-left {
@@ -871,8 +892,26 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 .split-right {
     background-color: #ccc;
 }
-#main-github {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+.content-box {
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 5px;
+    height: 40%;
+    padding-top: 5px;
 }
+.separator.centered {
+    margin: 5px auto;
+    width: 80%;
+    border-top: 2px solid #3B3941;
+}
+.content-box h2 {
+    margin: 0;
+}
+
+
+
+
+
+
+
