--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -826,19 +826,19 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 /* GITHUB PAGE ---------------------------------------------------------*/
 
-.video-container-github {
+.img-container-github {
     display: flex; 
     justify-content: space-between; 
     flex-wrap: wrap; 
 }
 
-.video-item {
+.img-item {
     padding: 10px;
     margin: 10px; 
     flex: 1 1 45%; 
 }
 
-.video-item img {
+.img-item img {
     max-width: 100%;
     height: auto; 
     border-radius: 30px;
