--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -778,11 +778,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     margin: 0 1rem 1rem 0;
 }
 
-@media (max-width: 750px) {
-    #course-glance-container {
-        margin: 0 0 0.5rem 0;
-    }
-}
+
 
 @media (max-width: 515px) {
     .tabcontent{
@@ -812,18 +808,20 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 }
 
 @media (max-width: 750px) {
-    #Videre-studiemuligheter-ved-OsloMet>#course-glance-container>svg {
-        scale: 2;
+    #course-glance-container {
+        margin: 0 0 0.5rem 0;
     }
-}
 
-
-@media (max-width: 750px) {
     #other-studies {
         margin: auto;
     }
-}
 
+    #Videre-studiemuligheter-ved-OsloMet>#course-glance-container>svg {
+        scale: 2;
+    }
+
+
+}
 /* GITHUB PAGE ---------------------------------------------------------*/
 
 .img-container-github {
@@ -847,19 +845,12 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 }
 
 /* GITHUB TEXT PARAGRAPH-------------------------------------------------*/
-#main-github {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 150vh;
-    box-sizing: border-box;
-}
 
 .split-container {
-    display: flex;
     justify-content: space-between;
     gap: 10px;
     margin: 20px;
+    display: flex;
 }
 
 .split-left, .split-right {
@@ -870,7 +861,6 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
     border: 3px solid #3B3941;
 }
 
@@ -899,8 +889,16 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     margin: 0;
 }
 
-
-
+@media (max-width: 900px) {
+    .split-container {
+        display: inline;
+    }
+    
+    .split-left, .split-right {
+        width: 100%;
+        padding: 0px;
+    }
+}
 
 
 
