--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -25,19 +25,19 @@ body {
 }
 
 hr {
-    margin: 0px;
+    margin: 0em;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 2.5rem;
 }
 
-@media(max-width:600px) {
+@media(max-width:37.5rem) {
     h1 {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
     #site-background {
-        top: 150px;
+        top: 9.375rem;
     }
 }
 
@@ -60,32 +60,32 @@ h5 {
 /* header ------------------------------------- */
 header {
     background-color: #3B3941;
-    box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0rem 0.375rem 1rem 0rem rgba(0, 0, 0, 0.2);
 
 }
 
 #header-logo {
-    margin-left: 15px;
-    margin-top: 15px;
-    max-width: 100px;
-    min-width: 15mm;
+    margin-left: 0.9rem;
+    margin-top: 0.9rem;
+    max-width: 6.25rem;
+    min-width: 3.54rem;
 }
 
 .img-container {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 0.625rem;
 }
 
 #search-button {
     color: #ffd500;
-    width: 60px;
-    height: 60px;
+    width: 3.75rem;
+    height: 3.75rem;
     cursor: pointer;
     border: none;
-    font-size: 28px;
-    padding-top: 16px;
+    font-size: 1.75rem;
+    padding-top: 1rem;
 }
 
 /* dropdown-menu ------------------------------------------------------------------- */
@@ -94,11 +94,11 @@ header {
 .dropbtn {
     background-color: #3B3941;
     color: #ffd500;
-    font-size: 35px;
+    font-size: 2.19rem;
     border: none;
     cursor: pointer;
-    width: 60px;
-    height: 60px;
+    width: 3.75rem;
+    height: 3.75rem;
     float: right;
 }
 
@@ -113,18 +113,18 @@ header {
     right: 0;
     background-color: #ffd500;
     min-width: 16rem;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.2);
     z-index: 1;
     font-size: larger;
 }
 
 .dropdown-content a {
     color: black;
-    padding: 16px 16px;
+    padding: 1rem 1rem;
     text-decoration: none;
     display: block;
     transition: 0.2s background-color ease;
-    border-top: 1px solid rgb(92, 92, 92);
+    border-top: 0.06rem solid rgb(92, 92, 92);
 }
 
 .dropdown-content a:hover {
