--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -36,7 +36,7 @@ p{
     font-size: larger;
 }
 
-@media(max-width:37.5rem) {
+@media(max-width:600px) {
     h1 {
         font-size: 1.875rem;
     }
@@ -140,10 +140,10 @@ header {
     height: 0;
     overflow: hidden;
     margin: auto;
-    border-radius: 30px;
-    border: 3px solid #ffd500;
-    margin-top: 50px;
-    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.112);
+    border-radius: 1.875rem;
+    border: 0.19rem solid #ffd500;
+    margin-top: 3.125rem;
+    box-shadow: 0rem 0.25rem 1.25rem 0rem rgba(0, 0, 0, 0.112);
 }
 
 @media (max-width: 600px) {
@@ -155,7 +155,7 @@ header {
         margin-top: 0;
         box-shadow: none;
         border-radius: 0;
-        border: 3px solid #ffd500;
+        border: 0.19rem solid #ffd500;
     }
 
 }
@@ -175,8 +175,8 @@ nav {
     display: flex;
     justify-content: right;
     align-items: center;
-    padding: 10px 20px;
-    min-height: 90px;
+    padding: 0.625rem 1.25rem;
+    min-height: 5.625rem;
 }
 
 /* muligens endre størrelse på nav på mobile */
@@ -190,7 +190,7 @@ nav {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 1.125rem;
     flex-wrap: wrap;
     justify-content: center;
     padding: 0 15%;
@@ -199,9 +199,9 @@ nav {
 
 .nav-links li {
     display: inline;
-    padding: 15px;
+    padding: 0.9rem;
     background-color: #00000022;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     transition: background-color 0.3s ease;
 }
 
@@ -211,7 +211,7 @@ nav {
 
 .nav-links a {
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 0.625rem;
     text-decoration: none;
     color: #ffd500;
     font-weight: bold;
@@ -224,7 +224,7 @@ nav {
 main {
     margin-left: 15%;
     margin-right: 15%;
-    padding-top: 50px;
+    padding-top: 3.125rem;
 }
 
 /* for mobile */
@@ -232,7 +232,7 @@ main {
     main {
         margin-left: 5%;
         margin-right: 5%;
-        padding-top: 20px;
+        padding-top: 1.25rem;
     }
 }
 
@@ -256,7 +256,7 @@ main {
 .detail-box {
     width: 13rem;
     margin: 0.6%;
-    border: 1px solid #ddd;
+    border: 0.06rem solid #ddd;
     padding: 1rem;
     border-radius: 1rem;
 }
@@ -298,7 +298,7 @@ main {
 #studenthistorier-container {
     width: 100%;
     transition: 0.2s all ease;
-    padding-right: 35px;
+    padding-right: 2.19rem;
     overflow: hidden;
 }
 
@@ -306,7 +306,7 @@ main {
     position: absolute;
     top: 45%;
     /* right setter ikonet 35px til venstre fra høyre kant */
-    right: 35px;
+    right: 2.19rem;
     /* gjør at den flytter seg, right 50px --> 0px */
     transition: 0.2s all ease;
     z-index: -1;
@@ -393,11 +393,11 @@ main {
     }
 
     #studenthistorier-container:hover #link-chevron {
-        right: -35px;
+        right: -2.19rem;
     }
 
     #link-chevron {
-        right: -25px;
+        right: -1.56rem;
         top: 48%;
     }
 
@@ -421,7 +421,7 @@ main {
 /* studies ----------------------------------------------- */
 
 #person-text {
-    padding-left: 10px;
+    padding-left: 0.625rem;
     display: inline-block;
 }
 
@@ -439,8 +439,8 @@ main {
 
 #img-krhel3944 {
     max-width: 8em;
-    border-radius: 5px;
-    box-shadow: -2px 4px 5px 0px rgba(0, 0, 0, 0.267);
+    border-radius: 0.32rem;
+    box-shadow: -0.125rem 0.25rem 0.31rem 0rem rgba(0, 0, 0, 0.267);
 
 }
 
@@ -458,7 +458,7 @@ main {
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
     margin: auto;
-    border-radius: 10px;
+    border-radius: 0.625rem;
 }
 
 .more-info-tabcontent>a {
@@ -479,8 +479,8 @@ main {
 .more-info-tab button {
     cursor: pointer;
     background-color: #7f7f7f17;
-    border: 1px;
-    border-radius: 5px;
+    border: 0.0625rem;
+    border-radius: 0.31rem;
 }
 
 .moreInfo {
@@ -502,8 +502,8 @@ footer #col1,
 footer #col2,
 footer #col3 {
     float: left;
-    width: 320px;
-    padding: 40px 40px 40px 40px;
+    width: 20rem;
+    padding: 2.5rem 2.5rem 2.5rem 2.5rem;
 }
 
 footer #icon {
@@ -515,13 +515,13 @@ footer #icon {
 .mediabox {
     overflow: hidden;
     padding: 3rem 0em;
-    border-top: 20px solid rgba(255, 255, 255, 0.08);
+    border-top: 1.25rem solid rgba(255, 255, 255, 0.08);
     text-align: center;
     background: #3B3941;
 }
 
 .mediabox p {
-    letter-spacing: 1px;
+    letter-spacing: 0.06rem;
     font-size: 0.9rem;
     color: rgba(255, 255, 255, 0.6);
 }
