--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -855,8 +855,6 @@ h1.github{
 #main-github {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    height: 150vh;
     box-sizing: border-box;
 }
 
@@ -869,7 +867,7 @@ h1.github{
 
 .split-left, .split-right {
     width: 49%;
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
     border-radius: 30px;
     display: flex;
@@ -890,13 +888,14 @@ h1.github{
     padding: 10px;
     border-radius: 5px;
     margin: 5px;
-    height: 40%;
+    min-height: 40%;
 }
 
 .separator.centered {
     margin: 5px auto;
     width: 80%;
     border-top: 2px solid #3B3941;
+    margin-top: 5px;
 }
 
 .content-box h2 {
