--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -505,6 +505,9 @@ footer #col3 {
     width: 20rem;
     padding: 2.5rem 2.5rem 2.5rem 2.5rem;
 }
+.address-font{
+    font-style: normal;
+}
 
 footer #icon {
     display: block;
