fix few id and classes

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -483,7 +483,7 @@ main {
     border-radius: 0.31rem;
 }
 
-.moreInfo {
+.more-info {
     overflow: hidden;
     padding: 3rem 0em;
     background: #7f7f7f17;
