--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -158,11 +158,13 @@ header {
 
 iframe {
     position: absolute;
-    top: 0;
+    top: -2px;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100.5%;
+    height: 100.5%;
     border: none;
+    /* top, width and height adjusted to better fit inside borders. 
+    For some reason the video was slightly smaller than the border, showing 1px thick lines at top and right */
 }
 
 
