--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -898,6 +898,8 @@ h1.github {
 }
 
 /* activity page ---------------------------------------------------*/
+
+/* dette må fikses */
 :root{
     --navy: #2F4156;
     --teal: #567C8D;
@@ -989,7 +991,7 @@ a {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    background-color: #567C8D;
+    /* background-color: #567C8D; */
   }
   
   /* Change color of dropdown links on hover */
